--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="download">Download</a>
+                    </li>
                      
                     
                 </ul>
