--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('about')}}">About</a>
+                            <a class="nav-link" href="{{url_for('contact')}}">Contact Us</a>
                         </li>
                     </ul>
                 </div>
