--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}About{% endblock title %}
+{% block title %}Contact Us{% endblock title %}
 {% block body %}
     <div class="container my-4">
         <form action="/data" method="post" class="site-form">
